--- a/posts/centos-6-install-intellij-idea.asciidoc
+++ b/posts/centos-6-install-intellij-idea.asciidoc
@@ -12,8 +12,8 @@ v1,8-Jun-2014
 3. IntelliJ IDEA Community 13.0.1
 
 == Prerequisties
-1. link:centos-6-install-oracle-jdk[CentOS 6: Install Oracle JDK]
-2. link:centos-6-set-java_home[CentOS 6: Set JAVA_HOME]
+1. link:centos-6-install-oracle-jdk.asciidoc[CentOS 6: Install Oracle JDK]
+2. link:centos-6-set-java_home.asciidoc[CentOS 6: Set JAVA_HOME]
 
 == Install
 Download latest version of IntelliJ IDEA, extract and put in /usr/lib (file names vary with version number):
