fixed install issues. work on posts

--- a/posts/centos-6-install-epel-yum-repository.asciidoc
+++ b/posts/centos-6-install-epel-yum-repository.asciidoc
@@ -15,12 +15,12 @@ NOTE: replace $MAJOR and $MINOR with the desired major and minor release. as of 
 
 [source,sh,numbered]
 wget http://dl.fedoraproject.org/pub/epel/$MAJOR/x86_64/epel-release-$MAJOR-$MINOR.noarch.rpm
-sudo rpm -Uvh epel-release-$MAJOR-$MINOR.noarch.rpm
+sudo yum localinstall epel-release-$MAJOR-$MINOR.noarch.rpm
 
 .Example
 [source,sh,numbered]
 wget http://dl.fedoraproject.org/pub/epel/6/x86_64/epel-release-6-8.noarch.rpm
-sudo rpm -Uvh epel-release-6-8.noarch.rpm
+sudo yum localinstall epel-release-6-8.noarch.rpm
 
 To discover latest major/minor, visit: http://dl.fedoraproject.org/pub/epel
 
