--- a/posts/centos-6-install-sbt.asciidoc
+++ b/posts/centos-6-install-sbt.asciidoc
@@ -6,13 +6,12 @@ v1,28-May-2014
 :blogpost-categories: scala,centos
 
 == Versions
-1. CentOS 6.5
+1. CentOS 6.5 x86_64
 2. Oracle JDK 1.7
-3. SBT 0.13.1
+3. SBT 0.13.5
 
 == Install
 [source,sh,numbered]
-sudo yum install sbt
 
 NOTE: sbt is now part of standard CentOS repos
 
